--- a/1-Blog/styles/style.css
+++ b/1-Blog/styles/style.css
@@ -14,24 +14,33 @@ nav a{
     font-size: 16px;
     line-height: 19px;
     text-decoration: none;
-    padding: 0 50px 0 0;
 }
 nav{
     margin-top: 80px;
     margin-bottom: 80px;
 }
-nav:first-child{
-    padding-left: 180px;
-}
-.site{
+
+.link-v{
     font-size: 18px;
     font-weight: 600;
     line-height: 23px;
+    padding-left: 180px;
+    padding-right: 11px;
     }
-.blog{
+.link-myblog{
     line-height: 21px;
     font-size: 18px;
+    padding-right: 77px;
     }
+.link-html{
+    padding-right: 52px;
+}
+.link-frontend{
+    padding-right: 32px;
+}
+.img{
+    vertical-align: middle;
+}
 input {
     font-size: 16px;
     background-color: rgba(31, 41, 55, 0.6);
@@ -49,7 +58,7 @@ h1{
     margin: 0 0 30px 0;
     text-align: center;
 }
-.heroText{
+.subject{
     line-height: 16.41px;
     margin: 0 0 14px 0;
     text-align: center;
@@ -60,29 +69,29 @@ h1{
     line-height: 28px;
     text-align: center;
 }
-.developer{
+.author__job{
     font-size: 14px;
 }
-.name,{
+.author__name{
     font-size: 16px;
 }
-.imageText{
+.text__img{
     margin: 0 0 69px 0;
 }
 .text{
     text-align: center;
 }
-.sectionText1{
+.text__elem1{
     margin: 0 0 30px 0;
     line-height: 32px;
     font-size: 20px;
 }
-.sectionText2,.sectionText3 {
+.text__elem2,.text__elem3 {
     line-height: 30px;
     font-size: 16px;
     margin: 0 0 30px 0;
 }
-.sectionText3{
+.text__elem3{
     margin-bottom:0
 }
 footer p{
@@ -92,10 +101,3 @@ footer p{
     line-height: 28px;
     font-size: 16px;
 }
-    
-
-    
-
-
-
-     
