--- a/1-Blog/styles/style.css
+++ b/1-Blog/styles/style.css
@@ -19,20 +19,23 @@ nav{
     margin-top: 80px;
     margin-bottom: 80px;
 }
+.title{font-weight: 600;
+padding-right: 11px;
+}
+
 .link:first-child{
     font-size: 18px;
-    font-weight: 600;
     line-height: 23px;
     padding-left: 180px;
-    padding-right: 11px;   
+    padding-right: 77px;   
 }
 .link:nth-child(2){
-    padding-right: 77px;
+    
 }
-.link:nth-child(3){
+.link:nth-child(2){
     padding-right: 52px;
 }
-.link:nth-child(4){
+.link:nth-child(3){
     padding-right: 39px;
 }
 .logo{
