--- a/1-Blog/styles/style.css
+++ b/1-Blog/styles/style.css
@@ -79,6 +79,7 @@ h1{
     line-height: 38px;
     margin: 0 0 30px 0;
     text-align: center;
+    color: #FFFFFF;
 }
 .subject{
     line-height: 16.41px;
