--- a/1-Blog/styles/style.css
+++ b/1-Blog/styles/style.css
@@ -100,11 +100,11 @@ h1{
     flex-wrap: nowrap;
     justify-content: center;
 }
-.author__job{
+.profile__job{
     font-size: 14px;
     
 }
-.author__name{
+.profile__name{
     font-size: 16px;
     
 }
@@ -113,7 +113,7 @@ h1{
     width: 50px;
     align-self: center;
 }
-#author{
+.profile{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
